# BookServer

./: .coveragerc  .flake8  .gitignore  .readthedocs.yml  LICENSE  LICENSE.rst  README.md  README.rst  alembic.ini  codechat_config.json  codechat_config.yaml  conf.py  config.py  index.rst  makeRelease.sh  mypy.ini  pre_commit_check.py  pyproject.toml  tox.ini  tzparsetest.py
.github/workflows/: python-package.yml
alembic/: env.py  rename_indices.sql  script.py.mako  toctree.rst
alembic/versions/: .gitignore  217f49a3b6be_merge_heads.py  4a9dc6be945f_.py  ee5c9117b71f_.py  ef493a5aed7f_.py
app/: applogger.py  crud.py  database.py  db.py  dependencies.py  main.py  models.py  schemas.py  toctree.rst
app/internal/: utils.py
app/routers/: assessment.py  books.py  rslogging.py
bookserver/: __init__.py  __main__.py  applogger.py  config.py  crud.py  db.py  main.py  models.py  nginx.conf  schemas.py  session.py  toctree.rst
bookserver/internal/: __init__.py  common_builder.py  feedback.py  scheduled_builder.py  team.py  toctree.rst  utils.py
bookserver/routers/: assessment.py  auth.py  books.py  coach.py  discuss.py  rslogging.py  toctree.rst
bookserver/staticAssets/: index.css
bookserver/templates/auth/: login.html
bookserver/templates/books/: _base.html  index.html
bookserver/templates/discuss/: home.html
deployment/: gunicorn.conf.py  nginx.conf  run_server.sh  toctree.rst  uwsgi.ini
docs/: design.rst  dev_guide.rst  dev_toctree.rst  goals.rst  installation.rst  requirements-rtd.txt
test/: ci_utils.py  conftest.py  pytest.ini  test_rslogging.py  test_runestone_components.py  toctree.rst
