# ********************************
# |docname| - Poetry configuration
# ********************************
#
# See https://python-poetry.org/docs/dependency-specification/ to get an understanding of 
# how poetry does specifies dependencies
#
[tool.poetry]
name = "bookserver"
version = "0.1.0"
description = "A new Runestone Server Framework"
authors = ["Brad Miller <bonelake@mac.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
uvicorn = "^0.13.1"
Jinja2 = "^2.11.2"
aiofiles = "^0.6.0"
alembic = "^1.4.3"
python-dateutil = "^2.8.1"
databases = {extras = ["sqlite", "postgresql"], version = "^0.4.1"}
coverage = "^5.3.1"
pytest-cov = "^2.10.1"
fastapi-login = "^1.5.3"
pydal = "^20210215.1"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.0"
flake8 = "^3.8.4"
CodeChat_Server = "^0.0.15"
recommonmark = "^0.7.0"
sphinx-rtd-theme = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ignore=_build"
#collect_ignore = ["_build"]